examples/error/NoMain.c
int funzione(){
	int a;
	int c;
	int a;

	a = 5;

}

int funzione() {
	int a;
}
